--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Projeto 2</a></h3>
-								<p>Em construcao</p>
+								<a href="#" class="image featured"><img src="https://i.imgur.com/MakhqqB.png" alt="" /></a>
+								<h3><a href="#">Projeto Pipeline + ETL + AI Generativa</a></h3>
+								<p>Pipeline usando API e AI Generativa para criar mensagens customizadas para cada cliente</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
