--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Marketing Ciclismo</a></h3>
-								<p>Converter clientes casuais em clientes premium.</p>
+								<a href="#" class="image featured"><img src="https://c8.alamy.com/comp/2A9X75F/budapest-hungary-nov-6-2019-public-green-bikes-for-rental-in-the-center-of-the-hungarian-capital-city-bike-sharing-eco-friendly-means-of-transport-ecological-measures-in-the-cities-bicycles-2A9X75F.jpg" alt="" /></a>
+								<h3><a href="#">Projeto Marketing Ciclismo</a></h3>
+								<p>Converter clientes casuais em clientes premium para uma empresa de aluguel de bikes.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
