adicionado novos projetos

--- a/index.html
+++ b/index.html
@@ -51,37 +51,37 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/raphapx/marketing_ciclismo" class="image featured"><img src="https://c8.alamy.com/comp/2A9X75F/budapest-hungary-nov-6-2019-public-green-bikes-for-rental-in-the-center-of-the-hungarian-capital-city-bike-sharing-eco-friendly-means-of-transport-ecological-measures-in-the-cities-bicycles-2A9X75F.jpg" alt="" /></a>
+								<a href="https://github.com/raphapx/marketing_ciclismo" target="_blank" class="image featured"><img src="https://c8.alamy.com/comp/2A9X75F/budapest-hungary-nov-6-2019-public-green-bikes-for-rental-in-the-center-of-the-hungarian-capital-city-bike-sharing-eco-friendly-means-of-transport-ecological-measures-in-the-cities-bicycles-2A9X75F.jpg" alt="" /></a>
 								<h3><a href="https://github.com/raphapx/marketing_ciclismo">Projeto Marketing Ciclismo</a></h3>
 								<p>Converter clientes casuais em clientes premium para uma empresa de aluguel de bikes.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/raphapx/Pipeline-API-para-ETL-com-IA-Generativa" class="image featured"><img src="https://i.imgur.com/MakhqqB.png" alt="" /></a>
-								<h3><a href="#">Projeto Pipeline + ETL + AI Generativa</a></h3>
+								<a href="https://github.com/raphapx/Pipeline-API-para-ETL-com-IA-Generativa" target="_blank" class="image featured"><img src="https://i.imgur.com/MakhqqB.png" alt="" /></a>
+								<h3><a href="https://github.com/raphapx/Pipeline-API-para-ETL-com-IA-Generativa" target="_blank">Projeto Pipeline + ETL + AI Generativa</a></h3>
 								<p>Pipeline usando API e AI Generativa para criar mensagens customizadas para cada cliente</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Projeto 3</a></h3>
-								<p>Em construção</p>
+								<a href="https://lookerstudio.google.com/reporting/5af916f7-75c1-4b52-8284-28f7b1c6e622" target="_blank" class="image featured"><img src="https://i.imgur.com/gHB4wkV.png" alt="" /></a>
+								<h3><a href="https://lookerstudio.google.com/reporting/5af916f7-75c1-4b52-8284-28f7b1c6e622" target="_blank">Dashboard de perfomance de atendentes</a></h3>
+								<p>Performance de atendendes de telemarketing</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Projeto 4</a></h3>
-								<p>Em construção.</p>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiN2IwZDVkMjYtZTllYy00ZjA4LWEyZjAtYmUyNjE5Nzg5YTY1IiwidCI6IjhjODVmMzMzLTM2MzctNDZiZi05N2Y2LWQ5NWQ1ODE4MjM4NSJ9" class="image featured"><img src="https://i.imgur.com/DettB2x.png" alt="" /></a>
+								<h3><a href="https://app.powerbi.com/view?r=eyJrIjoiN2IwZDVkMjYtZTllYy00ZjA4LWEyZjAtYmUyNjE5Nzg5YTY1IiwidCI6IjhjODVmMzMzLTM2MzctNDZiZi05N2Y2LWQ5NWQ1ODE4MjM4NSJ9">Indicadores economicos de regiões</a></h3>
+								<p>Indicadores economicos de regiões metropolitanas para descobrir a melhor região para o negócio.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Projeto 5</a></h3>
-								<p>Em construção.</p>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiYWFhYzk0NDktOGRmMi00ZWVkLTk4ZGUtNGNiMjIzNmNlZTA4IiwidCI6IjhjODVmMzMzLTM2MzctNDZiZi05N2Y2LWQ5NWQ1ODE4MjM4NSJ9" class="image featured"><img src="https://i.imgur.com/UgvW1Tl.png alt="" /></a>
+								<h3><a href="https://app.powerbi.com/view?r=eyJrIjoiYWFhYzk0NDktOGRmMi00ZWVkLTk4ZGUtNGNiMjIzNmNlZTA4IiwidCI6IjhjODVmMzMzLTM2MzctNDZiZi05N2Y2LWQ5NWQ1ODE4MjM4NSJ9">Dashboard relatório financeiro</a></h3>
+								<p>Dashboard com relatorios financeiros feitos no powerbi, usando KPI importante.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
